# qser

./: Cargo.toml  rustfmt.toml
benches/: bench.rs  twitter.json
derive/: Cargo.toml
derive/src/: attr.rs  bound.rs  de.rs  lib.rs  opts.rs  ser.rs
examples/: cs-qser.rs  cs-serdejson.rs
src/: careful.rs  error.rs  lib.rs  place.rs
src/de/: impls.rs  mod.rs
src/json/: array.rs  de.rs  mod.rs  object.rs  raw.rs  ser.rs  value.rs
src/ser/: impls.rs  mod.rs
