[package]
name = "qser"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = []

[dependencies]
itoa = "1.0.15"
ryu = "1.0.20"
qser-derive = { path = "./derive" }

[dev-dependencies]
automod = "1.0"
indoc = "2.0"
rustversion = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
trybuild = { version = "1.0.49", features = ["diff"] }
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false

[workspace]
resolver = "3"
members = [ ".", "derive" ]

[profile.bench]
lto = "thin"
codegen-units = 1

[profile.release]
lto = "thin"
codegen-units = 1
