[package]
name = "qser"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = []

[dependencies]
itoa = "1.0.15"
ryu = "1.0.20"
qser-derive = { path = "./derive" }

[dev-dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false

[workspace]
resolver = "3"
members = [ ".", "derive" ]

[profile.bench]
lto = "fat"
codegen-units = 1

[profile.release]
lto = "fat"
codegen-units = 1
