[package]
name = "qser"
version = "0.1.0"
edition = "2024"

[dependencies]
itoa = "1.0.15"
ryu = "1.0.20"
qser-derive = { path = "./derive" }

[dev-dependencies]
criterion = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[[bench]]
name = "bench"
harness = false

[workspace]
resolver = "3"
members = [ ".", "derive" ]

[profile.bench]
lto = "fat"
codegen-units = 1

[profile.release]
lto = "fat"
codegen-units = 1
